--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -10,6 +10,9 @@ env:
   CDN_ENDPOINT: "afd-8321f85459a3065e"
   RESOURCE_GROUP: "terraform-beginner-bootcamp-2023-azure"
 
+permissions:
+      id-token: write
+      contents: read
 
 jobs:
   build:
@@ -18,7 +21,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: azure/login@v1
       with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      client-id: ${{ secrets.AZURE_CLIENT_ID }}
+      tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+      subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - name: Upload to blob storage
       uses: azure/CLI@v1
