--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-PROJECT_ROOT = "/workspace/static-website-azure-oid"
-GITHUB_TOKEN ="V3Fg8ezGxseOwvAcCcRZzQKiJuJErsrZoEXAMPLE"
+PROJECT_ROOT="/workspace/static-website-azure-oid"
+
+# Reguired to authenticate GitHub CLI.
+GITHUB_TOKEN="V3Fg8ezGxseOwvAcCcRZzQKiJuJErsrZoEXAMPLE"
+
+# The Azure resource group the static website belongs to.
+RESOURCE_GROUP="terraform-beginner-bootcamp-2023-azure"
