#28 Update workflow Update workflow to trigger on push tp public folder or subfolders.

--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,6 +1,11 @@
 name: Blob storage website CI
 
-on: [workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - "./public/**"
 
 
 env:
