--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,12 +1,12 @@
 tasks:
   - name: gh-cli
     before: |
-      cd $PROJECT_ROOT
+      cd $GITPOD_REPO_ROOT
       source ./bin/install-gh-cli.sh
       gp sync-done gh-cli
   - name: azure-cli
     before: |
-      cd $PROJECT_ROOT
+      cd $GITPOD_REPO_ROOT
       gp sync-await gh-cli && source ./bin/install-azure-cli.sh
 vscode:
   extensions:
